--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tesla-coil",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "The static site generation tool for Neutorn based on Lightning Rod.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Neutron Creative Inc.",
@@ -15,5 +16,8 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "netlify": "^6.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
